--- a/.env
+++ b/.env
@@ -41,8 +41,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> google/recaptcha ###
 # To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
 # https://www.google.com/recaptcha/admin
-GOOGLE_RECAPTCHA_SITE_KEY=
-GOOGLE_RECAPTCHA_SECRET=
+# GOOGLE_RECAPTCHA_SITE_KEY=
+# GOOGLE_RECAPTCHA_SECRET=
 ###< google/recaptcha ###
 
 ###> karser/karser-recaptcha3-bundle ###
