--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3"
+    },
+    "engines":{
+        "node":"v13.11.*",
+        "npm":"6.14.*"
     }
 }
