--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 ###> symfony/framework-bundle ###
-/.env.local
+# /.env.local mis en commentaire le temps de la correction de l'ecf
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
